# german-smart-apply

./: .dockerignore  .gitignore  DEPLOYMENT.md  README.md  eslint.config.mjs  package.json  plan.md  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: crawl-pipeline.yml  fly-deploy.yml
apps/api/: .env.example  .gitignore  .swcrc  Dockerfile  fly.toml  package.json  tsconfig.json  vitest.config.ts
apps/web/: Dockerfile  fly.toml  next.config.js  package.json  playwright.config.ts  tsconfig.json
infra/: README.md  docker-compose.yml  env.example
workers/: .gitignore  Dockerfile  fly.toml  pyproject.toml  requirements.txt
workers/common/: __init__.py  db.py  market_de.py
workers/crawler/: __init__.py  arbeitsagentur.py  base.py  greenhouse.py  lever.py  personio.py  runner.py  seed.py  smartrecruiters.py  stepstone.py
workers/deduplicator/: __init__.py  dedup.py  near_duplicates.py  seed.py  trust.py
workers/normalizer/: __init__.py  extractors.py  fields.py  pipeline.py
workers/scripts/: prune_raw_job_snapshots.py  run_pipeline.py  verify_source_tokens.py
workers/tests/: conftest.py  fakes.py  helpers.py  test_common_db.py  test_crawler_adapters.py  test_crawler_runner.py  test_crawler_seed.py  test_dedup.py  test_e2e_pipeline.py  test_near_duplicates.py  test_normalizer_fields.py  test_normalizer_pipeline.py
workers/tests/fixtures/: arbeitsagentur_jobs.json  greenhouse_jobs.json  lever_postings.json  personio_feed.xml  scam_listing.json  smartrecruiters_posting_details.json  smartrecruiters_postings.json  stepstone_feed.json
(+169 files in other folders)
